[package]
name = "MultiProcessing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fork = "0.1.22"
nix = { version = "0.27.1", features = ["process", "poll"] }
tokio = {version = "1.35.0", features = ["full"]}
tokio-stream = { version = "0.1.14", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
serde_json = "1.0.108"
httparse = { version = "1.8.0", features = [] }
http = { version = "1.0.0", features = [] }
httpdate = "1.0.3"
bytes = "1.5.0"
futures = "0.3.29"
serde = { version = "1.0.193", features = ["serde_derive", "derive", "alloc", "rc"] }
